--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
+    "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
@@ -21,6 +23,7 @@
     "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "redux-toolkit": "^1.1.2",
+    "swiper": "^12.0.3",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
