react chart package added

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.1",
+    "chat.js": "^1.0.2",
     "concurrently": "^9.2.0",
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
